# LIFE

./: .gitignore  README.md
deprecated/: README.md  fast.html  index.html  server.js  training-worker.js
deprecated/js/: brain.js  clan.js  editor.js  entity.js  fast-client.js  main.js  pellet.js  resource.js  stockpile.js  task.js  trainer.js  tree.js  world.js
deprecated/test/: smoke.js
life-rs/: Cargo.toml
life-rs/src/: app.rs  brain.rs  clan.rs  diag.rs  diplomacy.rs  entity.rs  grid.rs  main.rs  military.rs  quality.rs  rng.rs  settlement.rs  trainer.rs  world.rs
life-rs/src/world/: persistence.rs
wiki/: architecture.md  behaviors.md  classes.md  devlog.md  editor.md  index.md  prior-art.md  roadmap.md  save-format.md
