[package]
name = "life-rs"
version = "0.1.0"
edition = "2021"
description = "Native LIFE — a watchable, fast civilization/life simulator with evolving neural leaders."

[dependencies]
bincode = "=1.3.3"
crc32fast = "=1.5.0"
eframe = "0.28"
egui_plot = "0.28"
rayon = "1"
serde = { version = "=1.0.228", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

# Heavy graphics/UI tree: optimize even in dev so the playground stays smooth.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
